fix landing video alignment

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -141,6 +141,8 @@ html {
 
       .fullscreen-bg {
         position: fixed;
+        background-color: black;
+        text-align: center;
         top: 0;
         right: 0;
         bottom: 0;
